--- a/Lab2_Homepage/111304023_CSS_Lab.css
+++ b/Lab2_Homepage/111304023_CSS_Lab.css
@@ -110,3 +110,12 @@ body {
     font-size: 90%;
   }
 }
+.task-ul {
+  position: relative;
+  top: 2em;
+  left: 3em;
+  width: 20em;
+
+  /* 為了不影響視覺 */
+  opacity: 0;
+}
